# openmud

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_RAILWAY.md  Dockerfile  LICENSE  README.md  WEB_CLIENT.md  connect.sh  nixpacks.toml  pyproject.toml  quest_manager.py  railway.json  requirements.txt  server.py  tintin_config.tin  web_server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: COMANDOS_QUESTS.md  CONECTAR.md  CREAR_NPC.md  DEPLOY_RAILWAY.md  EXPANSAO_MUNDO.md  QUESTS_EXPLICACAO.md  README.md  RESPAWN_SISTEMA.md
mud/: __init__.py
mud/ai/: __init__.py  ai_quest_generator.py
mud/auth/: __init__.py  auth.py
mud/commands/: __init__.py  commands.py
mud/core/: __init__.py  database.py  models.py
mud/managers/: __init__.py  dungeon_manager.py  game_data.py  lore_manager.py  quest_manager.py  world_lore_manager.py  world_manager.py
mud/systems/: __init__.py  character_creation.py  classes.py  combat.py  monster_races.py  spells.py
mud/utils/: __init__.py  ansi.py  ascii_monsters.py  ascii_npcs.py  ascii_players.py  compatibility_test.py  visuals.py
utils/: __init__.py
web/: index.html
worlds/: default.json
worlds/default/: NPCS_README.md  dungeons.json  items.json  monsters.json  npcs.json  quests.json  rooms_config.json  world_lore.json
